--- a/Python/check_and_cleanup.ipynb
+++ b/Python/check_and_cleanup.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\Programming\\PowerBI\\FinlandEmissions2023\\Data\\Finland_emissions_2023.csv d:\\Programming\\PowerBI\\FinlandEmissions2023\\Python\n"
+      "../Data/Finland_emissions_2023.csv d:\\Programming\\PowerBI\\FinlandEmissions2023\\Python\n"
      ]
     },
     {
@@ -190,13 +190,13 @@
        "9                                          30720  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = \"d:\\\\Programming\\\\PowerBI\\\\FinlandEmissions2023\\\\Data\\\\\"\n",
+    "data_dir = \"../Data/\"\n",
     "main_file = \"Finland_emissions_2023.csv\"\n",
     "print(data_dir + main_file + \" \" + os.getcwd())\n",
     "df = pd.read_csv(data_dir + main_file)\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "[944 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "9              30720  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "9               30720              0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "4                 944              1  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "<Axes: xlabel='Year'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "4                5208              5  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "Name: Emission CO2 equiv, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
        "4              0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
        "843  2023  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1718,7 @@
        "23                      1D1b International navigation  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
